# pabrod.github.io-src

./: .gitignore  .gitmodules  Makefile  pelicanconf.py  publishconf.py  pyproject.toml
auxs/Rmd/: 2019-03-22 PyR.Rmd
content/: 2018-02-06 Elevator-en.md  2018-02-06 Elevator-es.md  2018-04-10-Mi-fin-de-master-en.md  2018-04-10-Mi-fin-de-master-es.md  2018-04-23 Welcome-en.md  2018-04-23 Welcome-es.md  2018-05-01 Elevator-en.md  2018-05-01 Elevator-es.md  2018-05-05 Shiny-en.md  2018-06-06 Very quick introduction to PDEs.md  2018-06-10 Invasive species.md  2018-06-12 Multidisciplinary-en.md  2018-06-12 Multidisciplinary-es.md  2018-07-04 Benefits of chaos.md  2018-07-19 Paper chaos neutrality-es.md  2018-08-22 Example of reproducible.md  2018-09-03 daylight-saving-en.md  2018-11-03 Fourier-en.md  2018-12-02 Animations-en.md  2019-03-22 PyR-en.md  2019-04-19 Paper quasipotential-en.md  2019-08-20 nesc-en.md  2019-11-17 NLeSC_symp.md  2019-12-08 Levi-Civita-en.md  2020-03-09 Arte_y_ciencia.md  2020-06-08 defense-en.md  2020-06-08 defense-es.md  2020-10-12 complex-en.md  2020-10-16 cenl-en.md  2020-10-19 modelos-es.md  2020-10-24 clock-en.md  2021-05-26 storytelling-en.md  2021-06-11 softwarewur-en.md  2022-08-08 vertaling-canon-en.md  2022-08-08 vertaling-canon-es.md  2022-08-08 vertaling-canon-nl.md  content.md
content/pages/: about-en.md  about-es.md  about-nl.md  academic-record.md  bio-en.md  bio-es.md  bio-nl.md  education-en.md  education-es.md  feeds-list-en.md  feeds-list-es.md  playground.md  portfolio-en.md  publications-en.md  publications-es.md  sci-comm-en.md  (+3 more)
